--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;300;600&family=Fraunces:opsz,wght@9..144,600;9..144,900&display=swap');
+@import 'media.scss';
 
 $backgroundColor: #3dbfff;
+$whiteColor: white;
+$blackColor:#000;
+$coneColor:rgb(0, 225, 255);
+$rodapeColor:#458c7eba;
+$sunnyriseColor:hsl(198, 62%, 26%);
+$btnHover:#ffd302;
+$footerBg:rgba(69, 140, 126, 0.7294117647);
 
 * {
     box-sizing: border-box;
@@ -33,7 +41,7 @@ body {
             width: 40%;
             display: flex;
             align-items: center;
-            color: white;
+            color: $whiteColor;
             font-size: 16px;
 
             ul {
@@ -51,17 +59,15 @@ body {
             }
 
             li:last-child:hover {
-                background-color: white;
-                color: black;
+                background-color: $whiteColor;
+                color: $blackColor;
                 font-weight: bold;
-                padding: 10px;
+                padding: 3px 4px;
                 border-radius: 10px;
                 font-family: 'Barlow', sans-serif;
 
             }
         }
-
-
     }
 
     .menu-hamb {
@@ -76,7 +82,6 @@ body {
         img {
             width: 100%;
             object-fit: cover;
-
         }
     }
 
@@ -387,7 +392,7 @@ body {
 
             .cone {
                 width: 50%;
-                background-color: rgb(0, 225, 255);
+                background-color: $coneColor;
 
                 img {
                     width: 100%;
@@ -411,7 +416,7 @@ body {
     .rodape {
         display: flex;
         flex-direction: column;
-        background-color: #458c7eba;
+        background-color: $rodapeColor;
         align-items: center;
         height: 38vh;
 
@@ -419,7 +424,7 @@ body {
             font-family: 'Fraunces', serif;
             font-size: 40px;
             font-weight: bold;
-            color: hsl(198, 62%, 26%);
+            color: $sunnyriseColor;
             width: 100%;
             display: flex;
             justify-content: center;
@@ -437,7 +442,7 @@ body {
             justify-content: space-around;
             height: 20%;
             align-items: center;
-            color: hsl(198, 62%, 26%);
+            color: $sunnyriseColor;
             font-family: 'Barlow', sans-serif;
             font-size: 16px;
         }
@@ -447,237 +452,85 @@ body {
             width: 21%;
             justify-content: space-around;
             height: 50%;
-            align-items: center; 
-    }
-}
-
-.menu-invisible {
-    display: none;
-
-}
-
-.menu-invisible2 {
-    display: flex;
-    width: 90%;
-    position: absolute;
-    background: white;
-    height: 40%;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-    font-family: 'Barlow', sans-serif;
-    font-weight: 600;
-
-    ul {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 100%;
-        justify-content: space-around;
-
-        li {
-            list-style-type: none;
-            cursor: pointer;
-        }
-
-        li:last-child:hover {
-            background-color: #ffd302;
-            color: black;
-            font-weight: bold;
-            padding: 6px;
-            border-radius: 10px;
-            font-family: 'Barlow', sans-serif;
-
+            align-items: center;
         }
     }
-}
 
-/*-----------------------------------------------------------------------------------------*/
-
-@media screen and (min-width:700px) {
-    .orange-first img {
-        object-fit: contain !important;
-    }
-}
-
-@media screen and (max-width:800px) {
-    .right-nav {
-        width: 60% !important;
-    }
-}
-
-@media screen and (max-width:786px) {
-    .left-nav {
-        width: 29% !important;
-    }
-}
-
-@media screen and (max-width:552px) {
-    .left-nav {
-        width: 35% !important;
-    }
-}
-
-
-@media screen and (min-width:480px) {
     .menu-invisible {
-        display: none !important;
-    }
-}
-
-@media screen and (max-width:480px) {
-
-    .eggs {
-        flex-direction: column-reverse !important;
-        height: unset !important;
-
-        .eggs-left {
-            width: 100% !important;
-            height: 100% !important;
-            justify-content: center;
-            padding: 60px 0px;
-        }
-
-        .eggs-right {
-            width: 100% !important;
-        }
+        display: none; 
     }
 
-    .cups {
-        flex-direction: column !important;
-        height: 125vh !important;
-
-        .cups-left {
-            width: 100% !important;
-        }
-
-        .cups-right {
-            padding: 60px 0px;
-            width: 100% !important;
-            height: 97vh !important;
-            justify-content: center;
-        }
-    }
-
-    .orange-berry {
-        flex-direction: column;
-
-        .berry {
-            width: 100% !important;
-            display: flex;
-                 .graphic-design p{
-                    padding: 0px 50px !important;
-                 }
-
-        }
-
-        .orange {
-            width: 100% !important;
-            .photography p{
-                padding: 0px 50px !important;
-             }
-        }
-    }
-
-    .menu-hamb {
-        display: flex !important;
-        position: absolute;
-        width: 100%;
+    .menu-invisible2 {
         display: flex;
+        width: 90%;
+        position: absolute;
+        height: 40%;
         align-items: center;
-        justify-content: end;
+        justify-content: center;
+        font-size: 16px;
+        font-family: 'Barlow', sans-serif;
+        font-weight: 600;  
+        z-index: 1;
+     
+    box-shadow: 1px 12px 20px -8px;
 
-        img {
-            padding: 20px;
-        }
-    }
 
-    .right-nav {
-        display: none !important;
-    }
-
-    .all-photos {
-        flex-direction: column;
-
-        .one {
-            width: 100% !important;
-        }
-
-        .two {
-            width: 100% !important;
-        }
-    }
-
-    .about {
-        width: 51%;
-    }
-
-    .people {
-        height: unset !important;
-
-        .people-all {
+        ul {
+            width: 100%;
+            display: flex;
             flex-direction: column;
             align-items: center;
+            background-color: $whiteColor;
+            height: 100%;
+            justify-content: space-around;
 
-            .emily {
-                width: 80% !important;
-
+            li {
+                list-style-type: none;
+                cursor: pointer;
             }
 
-            .thomas {
-                width: 80% !important;
-                margin-top: 14px;
+            li:last-child:hover {
+                background-color: $btnHover;
+                color: black;
+                font-weight: bold; 
+                border-radius: 10px;
+                font-family: 'Barlow', sans-serif;
+                padding: 4px 5px;
             }
-
-            .jennie {
-                width: 80% !important;
-                margin-top: 14px;
-            }
-        }
-    }
-}
-
-@media screen and (max-width:615px) {
-    .rodape {
-        height: 30vh !important;
-
-        .abouts {
-            width: 50% !important;
-        }
-
-        .redes-sociais {
-            width: 40% !important;
-        }
-    }
-}
-
-@media screen and (max-width:644px) {
-    .graphic-design {
-        p {
-            padding: 0px 8px !important;
-            font-size: 10px !important;
         }
     }
 
-    .photography {
-        p {
-            padding: 0px 8px !important;
-            font-size: 10px !important;
-        }
-    }
-}
 
-@media screen and (max-width:409px) {
-
-    .left-nav {
-        width: 50% !important;
+    footer {
+        display: flex;
+        justify-content: center;
+        padding: 0 10px 10px 20px;
+        text-align: center;
+        background-color:$footerBg;
+        color: $whiteColor;
+        font-family: 'Barlow', sans-serif;
     }
-}
 
-@media screen and (max-width:270px) {
-    .left-nav {
-        width: 65% !important;
+    .attribution a {
+        text-decoration: none;
+        color: $whiteColor;
     }
-}
-}
+
+    .attribution a:nth-child(2) {
+        font-weight: bold;
+    }
+
+    .frontendmentor {
+        font-style: italic;
+
+    }
+
+    .attribution img {
+        width: 20px;
+        padding: 0px;
+        vertical-align: middle;
+    }
+
+} 
+
+ 
